# tracking_pid

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  bitbucket-pipelines.yml  package.xml  pyproject.toml  setup.py  tracking_pid_plugin.xml
.github/workflows/: lint.yml  main.yml  ros-ci.yml
action/: FollowPath.action
cfg/: Pid.cfg  TargetVelocity.cfg
doc/figures/: controller.ipe  flowchart.ipe  motion_planning_diagram.ipe  schematic_config.ipe  tracking.ipe  tracking_base_link.ipe  trajectory.ipe
include/controller/: controller.h  controller_node.h
msg/: PidDebug.msg  error.msg  traj_point.msg  trajectory.msg
nodes/: path_interpolator
src/: controller.cpp  controller_node.cpp
src/difftrack_mpc/: path_interpolator.py
src/tracking_pid/: path_interpolator.py
test/: test_controller.cpp  test_interpolator.py  test_tracking_pid_system.py
test/difftrack_mpc/: controller.rviz  tracking_pid_cpp.rviz
test/difftrack_mpc/param/: controllers.yaml  planners.yaml
test/interpolator/: interpolator.rviz  test_path_interpolator_action.launch  test_path_interpolator_topic.launch  test_path_interpolator_topic_empty_frame_ids.launch
test/tracking_pid/: test_tracking_pid.test  test_tracking_pid_cpp.launch
trajectories/: back_and_forth.yaml  coverage.yaml  coverage_actiongoal.yaml  coverage_map.yaml  coverage_with_orientation.yaml  double_points.yaml  empty.yaml  empty_frame_ids.yaml  test_path.yaml  zigzag.yaml  zigzag_short.yaml
