<?xml version="1.0"?>
<package format="2">

  <name>tracking_pid</name>
  <version>2.2.0</version>
  <description>PID controller following a moving carrot</description>

  <maintainer email="cesar.lopez@nobleo.nl">Cesar Lopez</maintainer>

  <author email="michiel.francke@nobleo.nl">Michiel Francke</author>
  <author email="cesar.lopez@nobleo.nl">Cesar Lopez</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python-setuptools</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rostest</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>angles</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <test_depend>mobile_robot_simulator</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
    <nav_core plugin="${prefix}/tracking_pid_plugin.xml"/>
  </export>
</package>
